--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,7 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{{ page.title }}</title>
+    
+    <!-- css -->
     <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/styles.css">
+    
+    <!-- js -->
+    <script src="{{ site.baseurl }}/assets/js/scripts.js"></script>
+
+    <!-- plugins -->
+    {% feed_meta %}
+    {% seo %}
+
 </head>
 <body>
     {% include navigation.html %}
